@@ -4,6 +4,9 @@ Version 0.7.2 -- Subversion
 * Added missing edit links to titles in CSS and News admin (#000035)
 * Changed en_US to UTF-8
 * Fixed stupid encoding issue with cms_htmlentities
+* Added ability to invert the foreground/background color of htmlarea (#0000031)
+* Fixed htmlarea not loading due to a notice level error (#0000034)
+* Added search and replace to htmlarea
 
 Version 0.7.1 -- Wed Oct 26 2004
 -----------------
@@ -32,7 +35,6 @@ compatibility (#000013)
 * Fixed htmlarea displaying inproper align values (#0000021)
 * Fixed css not properly displaying in htmlarea until post (#0000031)
 * Fixed default language on login page to default to english. (#0000032)
-* Fixed htmlarea not loading due to a notice level error (#0000034)
 * Changed the header slogan to be text instead of an image (#0000015)
 
 Version 0.7 -- Mon Oct 11 2004
